--- a/frontend/components/MiniCarCard.css
+++ b/frontend/components/MiniCarCard.css
@@ -29,7 +29,7 @@
 /*-----------------*/
 
 
-.singleCarCard{
+/* .singleCarCard{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -37,12 +37,9 @@
     background-color: white;
     width: 17%;
 
-    gap: 0px; /*vertical gap between child divs; */
+    gap: 0px; 
 }
 
-.singleCarCard > div{
-    background-color: white;
-}
 
 .singleCardImageContainer{
     position: relative;
@@ -55,8 +52,35 @@
 .singleCardImageContainer img{
     width: 100%;
     height: auto;
-}
+} */
 
+/* MiniCarCard.css */
+.singleCarCard {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    background-color: white;
+    width: 100%; /* Fill parent (.card) */
+    gap: 0px;
+  }
+  
+  .singleCardImageContainer {
+    position: relative;
+    width: 100%;
+    aspect-ratio: 16/9; /* Forces image container to maintain proportions */
+    border-radius: 20px;
+    background-color: white;
+  }
+  
+  .singleCardImageContainer img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures image fills container without distortion */
+  }
+
+.singleCarCard > div{
+    background-color: white;
+}
 .carType{
     position: absolute;
     top:5%;
